testsuite/tests/properties/invalid_dyn_env/assocs_getter_bad_rtype.lkt
import common

class Example: FooNode {
    @lazy args_env: LexicalEnv[FooNode] =
        dynamic_lexical_env(Example.assocs_getter)

    fun assocs_getter(): Bool = true
}
